Contact page overflow fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 nav {
-  position: fixed;
+  position: absolute;
   padding-top: 18px;
   overflow: hidden;
   box-shadow: 0px 5px 10px #0a0a0a;
